- Wrap lwkp-root element in a main element of class cs-page-wrapper.

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" media="screen" href="/assets/css/theme.min.css">
 </head>
 <body>
+  <main class="cs-page-wrapper">
   <lwkp-root>
      <!-- Page loading styles-->
      <style>
@@ -88,5 +89,6 @@
       </div>
     </div>
   </lwkp-root>
+</main>
 </body>
 </html>
