- Add vendor scripts: js libraries and plugins. - Add back to top button. - Add main theme script.

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,18 @@
       </div>
     </div>
   </lwkp-root>
+  
 </main>
+ <!-- Back to top button--><a class="btn-scroll-top" href="#top" data-scroll><span class="btn-scroll-top-tooltip text-muted font-size-sm mr-2">Top</span><i class="btn-scroll-top-icon fe-arrow-up">   </i></a>
+    <!-- Vendor scrits: js libraries and plugins-->
+    <script src="/assets/vendor/jquery/jquery.slim.min.js"></script>
+    <script src="/assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendor/bs-custom-file-input/bs-custom-file-input.min.js"></script>
+    <script src="/assets/vendor/simplebar/simplebar.min.js"></script>
+    <script src="/assets/vendor/smooth-scroll/smooth-scroll.polyfills.min.js"></script>
+    <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="/assets/vendor/shufflejs/shuffle.min.js"></script>
+    <!-- Main theme script-->
+    <script src="/assets/js/theme.min.js"></script>
 </body>
 </html>
