- Add 'tiny-slider.css' link resource. - Remove 'imagesloaded.pkgd.min.js' script resource. - Add 'tiny-slider.js' script resource.

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
    <!-- Vendor Styles-->
    <link rel="stylesheet" media="screen" href="/assets/vendor/simplebar/simplebar.min.css"/>
+   <link rel="stylesheet" media="screen" href="/assets/vendor/tiny-slider/tiny-slider.css"/>
    <!-- Main Theme Styles + Bootstrap-->
    <link rel="stylesheet" media="screen" href="/assets/css/theme.min.css">
    <style>
@@ -99,8 +100,9 @@
     <script src="/assets/vendor/bs-custom-file-input/bs-custom-file-input.min.js"></script>
     <script src="/assets/vendor/simplebar/simplebar.min.js"></script>
     <script src="/assets/vendor/smooth-scroll/smooth-scroll.polyfills.min.js"></script>
-    <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <!-- <script src="/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script> -->
     <script src="/assets/vendor/shufflejs/shuffle.min.js"></script>
+    <script src="/assets/vendor/tiny-slider/tiny-slider.js"></script>
     <!-- Main theme script-->
     <script src="/assets/js/theme.min.js"></script>
 </body>
